FLM_HSI/MDK-ARM/.vscode/uv4.log
*** Using Compiler 'V6.19', folder: 'D:\Program\Keil\Keil_v5\ARM\ARMCLANG\Bin'
Build target 'STM32H750XBH6_ArtPi_QSPI_W25Q64JV_FLM'
../Loader/FlashPrg.c(93): error: call to undeclared function 'QSPI_W25Q64JV_Reset'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
        if(QSPI_W25Q64JV_Reset() != QSPI_OK)
           ^
../Loader/FlashPrg.c(100): error: call to undeclared function 'QSPI_W25Q64JV_Enable_Memory_Mapped'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
                if(QSPI_W25Q64JV_Enable_Memory_Mapped() != QSPI_OK)
                   ^
../Loader/FlashPrg.c(100): note: did you mean 'W25QXX_Enable_Memory_Mapped'?
../W25Q64JV\w25q64jv.h(169): note: 'W25QXX_Enable_Memory_Mapped' declared here
int W25QXX_Enable_Memory_Mapped(void);
    ^
../Loader/FlashPrg.c(132): error: call to undeclared function 'QSPI_W25Q64JV_Erase_Chip'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
    if(QSPI_W25Q64JV_Erase_Chip() != QSPI_OK)
       ^
../Loader/FlashPrg.c(162): error: call to undeclared function 'QSPI_W25Q64JV_Erase_Sector'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
    if(QSPI_W25Q64JV_Erase_Sector(adr) != QSPI_OK)
       ^
../Loader/FlashPrg.c(198): error: call to undeclared function 'QSPI_W25Q64JV_Write'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
        if(QSPI_W25Q64JV_Write(adr, buf, sz) != QSPI_OK)
           ^
5 errors generated.
compiling FlashPrg.c...
compiling w25q64jv.c...
".\Output\ArtPi_QSPI_W25Q64JV.axf" - 5 Error(s), 0 Warning(s).
Target not created.
Build Time Elapsed:  00:00:02
